# synapse-svc-template

./: .gitignore  Dockerfile  README.md  build.gradle.kts  docker-compose.yml  settings.gradle.kts
docs/: branch-verification-report-2026-05-19.md  spring-boot-4-migration-notes.md  w1-w4-progression-summary.md
learning-ai/: .importlinter  Dockerfile  pyproject.toml  requirements.txt
learning-ai/app/: main.py
learning-ai/app/ai/: recommendation_model.py
learning-ai/app/api/v1/: recommendation.py
learning-ai/app/application/: port.py  port_registry.py  recommendation_usecase.py
learning-ai/app/core/: config.py  dependencies.py  exceptions.py  response.py
learning-ai/app/domain/: models.py  policies.py
learning-ai/app/infrastructure/messaging/: consumer.py  events.py  producer.py
learning-ai/app/infrastructure/ml/: recommendation_adapter.py
learning-ai/app/kafka/: consumer.py  events.py  producer.py
learning-ai/app/models/: recommendation.py
learning-ai/app/services/: recommendation_service.py
learning-java/: Dockerfile  build.gradle.kts  settings.gradle.kts
learning-java/src/main/resources/: application-dev.yml  application-local.yml  application-prod.yml  application.yml
src/main/java/com/synapse/engagement/: EngagementApplication.java
src/main/java/com/synapse/knowledge/: KnowledgeApplication.java
src/main/java/com/synapse/platform/: PlatformApplication.java
src/main/resources/: application-dev.yml  application-local.yml  application-prod.yml  application.yml
src/test/java/com/synapse/engagement/: EngagementApplicationTests.java
(+293 files in other folders)
